style: fix layout stretching and font size

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -8,7 +8,7 @@
 }
 
 html {
-  font-size: 15px;
+  font-size: 16px;
   scroll-behavior: smooth;
 }
 
@@ -21,11 +21,7 @@ body {
   overflow-x: hidden;
 }
 
-@media (min-width: 901px) {
-  body {
-    overflow: hidden;
-  }
-}
+
 
 body::before {
   content: '';
